force-app/main/default/objects/Lead/fields/Accompanying_Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Accompanying_Guest_Email__c</fullName>
    <label>Accompanying Guest Email</label>
    <type>Email</type>
</CustomField>