force-app/main/default/objects/Lead/fields/Accompanying_Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Accompanying_Guest_Name__c</fullName>
    <label>Accompanying Guest Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>