force-app/main/default/objects/Lead/fields/Additional_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Staff_Required__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Additional Staff Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>