force-app/main/default/objects/Lead/fields/Additional_Staff_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Additional_Staff_Unit_Price__c</fullName>
    <label>Additional Staff Unit Price (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>