force-app/main/default/objects/Lead/fields/Alternative_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Organisation_Name__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Alternative Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>