force-app/main/default/objects/Lead/fields/Consent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consent_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Contact</label>
    <type>Checkbox</type>
</CustomField>