force-app/main/default/objects/Lead/fields/Consent_PII__c.field-meta.xml
<CustomField>
    <fullName>Consent_PII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent PII</label>
    <type>Checkbox</type>
</CustomField>