force-app/main/default/objects/Lead/fields/Consent_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Consent_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Promotion</label>
    <type>Checkbox</type>
</CustomField>