force-app/main/default/objects/Lead/fields/Contact_Consent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Contact Consent</label>
    <type>Checkbox</type>
</CustomField>