force-app/main/default/objects/Lead/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>DOB needed for info validaton</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>