force-app/main/default/objects/Lead/fields/Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Date__c</fullName>
    <label>Declaration Date</label>
    <type>Date</type>
</CustomField>