force-app/main/default/objects/Lead/fields/Declaration_Name__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Name__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Declaration Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>