force-app/main/default/objects/Lead/fields/Delivery_Window__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window__c</fullName>
    <label>Delivery Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday 28 February between 14:00 - 18:00</fullName>
            </value>
            <value>
                <fullName>Monday 1 March between 06:30 - 07:15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>