force-app/main/default/objects/Lead/fields/Event_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Email__c</fullName>
    <label>Event Contact Email</label>
    <type>Email</type>
</CustomField>