force-app/main/default/objects/Lead/fields/Event_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Mobile__c</fullName>
    <label>Event Contact Mobile</label>
    <type>Phone</type>
</CustomField>