force-app/main/default/objects/Lead/fields/Event_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Name__c</fullName>
    <label>Event Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>