force-app/main/default/objects/Lead/fields/Event_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Title__c</fullName>
    <label>Event Contact Job Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>