force-app/main/default/objects/Lead/fields/Event_Discovery_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Discovery_Source__c</fullName>
    <description>How the person discovered the National Transition Event.</description>
    <label>Event Discovery Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous exhibitor</fullName>
            </value>
            <value>
                <fullName>E-mail invitation</fullName>
            </value>
            <value>
                <fullName>Word of mouth from previous exhibitor</fullName>
            </value>
            <value>
                <fullName>Word of mouth from previous attendees</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Previous NTE event</fullName>
            </value>
            <value>
                <fullName>NTE webinar or brochure</fullName>
            </value>
            <value>
                <fullName>Email invitation</fullName>
            </value>
            <value>
                <fullName>Recommendation or word of mouth</fullName>
            </value>
            <value>
                <fullName>National Transition Event website</fullName>
            </value>
            <value>
                <fullName>Mission Community website</fullName>
            </value>
            <value>
                <fullName>Other social media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>