force-app/main/default/objects/Lead/fields/Exhibitor_Community_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Community_Contribution__c</fullName>
    <label>Exhibitor Community Contribution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>