force-app/main/default/objects/Lead/fields/Exhibitor_Hall_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Hall_Schedule__c</fullName>
    <label>Sunday Setup Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>