force-app/main/default/objects/Lead/fields/Exhibitor_Interest_Areas__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Interest_Areas__c</fullName>
    <label>Exhibitor Interest Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Careers and recruitment</fullName>
            </value>
            <value>
                <fullName>Training and education</fullName>
            </value>
            <value>
                <fullName>Automotive and mobility</fullName>
            </value>
            <value>
                <fullName>Manufacturing and engineering</fullName>
            </value>
            <value>
                <fullName>Renewable and clean energy</fullName>
            </value>
            <value>
                <fullName>Defence and security</fullName>
            </value>
            <value>
                <fullName>Built environment and facilities</fullName>
            </value>
            <value>
                <fullName>Financial and professional services</fullName>
            </value>
            <value>
                <fullName>Digital and technology</fullName>
            </value>
            <value>
                <fullName>Armed Forces charity or support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>