force-app/main/default/objects/Lead/fields/Exhibitor_Interest_Detail__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Interest_Detail__c</fullName>
    <label>Exhibitor Interest Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>