force-app/main/default/objects/Lead/fields/Exhibitor_Organisation_Category__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Organisation_Category__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Exhibitor Organisation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charity - member of Cobseo</fullName>
                <label>Charity - member of COBSEO</label>
            </value>
            <value>
                <fullName>Charity - not a member of Cobseo</fullName>
                <label>Charity - not a member of COBSEO</label>
            </value>
            <value>
                <fullName>Employer - Automotive Sector</fullName>
            </value>
            <value>
                <fullName>Employer - Manufacturing Sector</fullName>
            </value>
            <value>
                <fullName>Employer - Renewable &amp; Clean Energy Sector</fullName>
            </value>
            <value>
                <fullName>Employer - Defence</fullName>
                <label>Employer - Defence &amp; Security</label>
            </value>
            <value>
                <fullName>Employer - Built Environment</fullName>
            </value>
            <value>
                <fullName>Employer - Facilities Management</fullName>
            </value>
            <value>
                <fullName>Employer - Financial and Professional Services</fullName>
            </value>
            <value>
                <fullName>Employer - Digital &amp; Technologies</fullName>
            </value>
            <value>
                <fullName>Employer - Training Provider from any industry</fullName>
            </value>
            <value>
                <fullName>Employer - Landbased industry</fullName>
            </value>
            <value>
                <fullName>Employer - Blue Light &amp; NHS</fullName>
            </value>
            <value>
                <fullName>Employer - Other Sectors not denoted above</fullName>
            </value>
            <value>
                <fullName>Government or Government Agency</fullName>
            </value>
            <value>
                <fullName>Local Government or LG related</fullName>
            </value>
            <value>
                <fullName>Trade Association</fullName>
            </value>
            <value>
                <fullName>CIC or Not for Profit</fullName>
            </value>
            <value>
                <fullName>Regular or Reserve Services, or Cadets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>