force-app/main/default/objects/Lead/fields/Exhibitor_Space_Position__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Space_Position__c</fullName>
    <label>Exhibitor Space Position</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>