force-app/main/default/objects/Lead/fields/Exhibitor_Space_Price__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Space_Price__c</fullName>
    <label>Exhibitor Space Price (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>