force-app/main/default/objects/Lead/fields/Exhibitor_Space_Selections__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Space_Selections__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Exhibitor Space Selections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garage Space - reduced size with power - £599 + VAT</fullName>
            </value>
            <value>
                <fullName>Single Garage - Paddock Side with power - £799 + VAT</fullName>
            </value>
            <value>
                <fullName>Double Garage - Paddock Side with power - £1,299 + VAT</fullName>
            </value>
            <value>
                <fullName>Single Garage - Track Side - £799 + VAT</fullName>
            </value>
            <value>
                <fullName>Double Garage - Track Side - £1,299 + VAT</fullName>
            </value>
            <value>
                <fullName>Clean Energy Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Clean Energy Zone - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>Built Environment Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Built Environment Zone - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>Manufacturing Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Manufacturing Zone - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>Defence &amp; Security Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Defence &amp; Security Zone - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>Digital and Technologies Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Digital and Technologies Zone - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>FM Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>FM Zone - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>Professional &amp; Financial Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Professional &amp; Financial Zone - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>Training &amp; Education Zone - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Any other business - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>Any other business - Double - £849 + VAT</fullName>
            </value>
            <value>
                <fullName>Local Government Authority - Single - £249.50 + VAT</fullName>
            </value>
            <value>
                <fullName>Blue Light - Single - £249.50 + VAT</fullName>
            </value>
            <value>
                <fullName>Trade Association - Single - £499 + VAT</fullName>
            </value>
            <value>
                <fullName>COBSEO Charity - Single - Free</fullName>
            </value>
            <value>
                <fullName>Non COBSEO Charity - Single - Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>