force-app/main/default/objects/Lead/fields/Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Form_Version__c</fullName>
    <label>NTE Form Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>