force-app/main/default/objects/Lead/fields/Guest_Accessibility_Details__c.field-meta.xml
<CustomField>
    <fullName>Guest_Accessibility_Details__c</fullName>
    <label>Guest Accessibility Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>