force-app/main/default/objects/Lead/fields/Guest_Information_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Guest_Information_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guest Information Declaration</label>
    <type>Checkbox</type>
</CustomField>