force-app/main/default/objects/Lead/fields/Haulier_Name__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Name__c</fullName>
    <label>Haulier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>