force-app/main/default/objects/Lead/fields/Haulier_Staff__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Staff__c</fullName>
    <label>Haulier Staff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>