force-app/main/default/objects/Lead/fields/Haulier_Vehicle_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Vehicle_Dimensions__c</fullName>
    <label>Haulier Vehicle Dimensions</label>
    <length>120</length>
    <type>Text</type>
</CustomField>