force-app/main/default/objects/Lead/fields/Haulier_Vehicle_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Vehicle_Gross_Weight__c</fullName>
    <label>Haulier Vehicle Gross Weight</label>
    <length>120</length>
    <type>Text</type>
</CustomField>