force-app/main/default/objects/Lead/fields/Haulier_Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Vehicle_Registration__c</fullName>
    <label>Haulier Vehicle Registration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>