force-app/main/default/objects/Lead/fields/Haulier_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Vehicle_Type__c</fullName>
    <label>Haulier Vehicle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>