force-app/main/default/objects/Lead/fields/Heavy_Item_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Item_1_Description__c</fullName>
    <label>Heavy Item 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>