force-app/main/default/objects/Lead/fields/Heavy_Item_1_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Item_1_Gross_Weight__c</fullName>
    <label>Heavy Item 1 Gross Weight</label>
    <length>120</length>
    <type>Text</type>
</CustomField>