force-app/main/default/objects/Lead/fields/Heavy_Item_1_Registration__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Item_1_Registration__c</fullName>
    <label>Heavy Item 1 Registration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>