force-app/main/default/objects/Lead/fields/Heavy_Item_2_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Item_2_Dimensions__c</fullName>
    <label>Heavy Item 2 Dimensions</label>
    <length>120</length>
    <type>Text</type>
</CustomField>