force-app/main/default/objects/Lead/fields/Heavy_Vehicle_Required__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Vehicle_Required__c</fullName>
    <label>Heavy Vehicle Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not known yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>