force-app/main/default/objects/Lead/fields/Included_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>Included_Staff_Count__c</fullName>
    <label>Included Staff Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>