force-app/main/default/objects/Lead/fields/Industry_Body_Details__c.field-meta.xml
<CustomField>
    <fullName>Industry_Body_Details__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Industry Body / Trade Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>