force-app/main/default/objects/Lead/fields/Invoice_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Additional_Information__c</fullName>
    <label>Invoice Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>