force-app/main/default/objects/Lead/fields/Invoice_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Phone__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Invoice Contact Phone</label>
    <type>Phone</type>
</CustomField>