force-app/main/default/objects/Lead/fields/Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Required__c</fullName>
    <description>Calculated billable status; applicant invoice preference is recorded separately in Invoice Requested.</description>
    <label>Payment Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>