force-app/main/default/objects/Lead/fields/Invoiced_Company__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Company__c</fullName>
    <label>Invoiced Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>