force-app/main/default/objects/Lead/fields/Invoiced_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Email__c</fullName>
    <label>Invoiced Email</label>
    <type>Email</type>
</CustomField>