force-app/main/default/objects/Lead/fields/Invoiced_Person__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Person__c</fullName>
    <label>Invoiced Person</label>
    <length>200</length>
    <type>Text</type>
</CustomField>