force-app/main/default/objects/Lead/fields/Listed_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Listed_Price_Total__c</fullName>
    <label>Booking Total (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>