force-app/main/default/objects/Lead/fields/Logo_Upload_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_Upload_URL__c</fullName>
    <label>NTE Logo Upload URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>