force-app/main/default/objects/Lead/fields/NOK_Address__c.field-meta.xml
<CustomField>
    <fullName>NOK_Address__c</fullName>
    <label>Emergency Contact Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>